# wordle

./: .gitignore  Cargo.toml  wasm.js
docs/: index.html  wasm.js
static/: index.css  package.json
wordle-dict/: Cargo.toml  build.rs  word_list.txt
wordle-dict/src/: lib.rs
wordle-lib/: Cargo.toml
wordle-lib/src/: engine.rs  inference.rs  lib.rs  overlap.rs
wordle-ui/: Cargo.toml  build.bat
wordle-ui/src/: lib.rs  model.rs  tile.rs  worker.rs
wordle-ui/static/: index.html
