[package]
name = "wordle-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = "0.19"
yew-agent = "0.1"
web-sys = "0.3"
wasm-bindgen = "0.2"
wordle-lib = { path = "../wordle-lib" }
wordle-dict = { path = "../wordle-dict" }
serde = "1.0"
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"